syntax = "proto3";

package meta.v1;

import "cursor/v1/cursor.proto";

option go_package = "github.com/ruifrodrigues/ecooda/stubs/go/meta/v1";

message Meta {
  oneof optional_cursor {
    cursor.v1.Cursor cursor = 1;
  }
}